--- a/view/css/project/widget/message.css
+++ b/view/css/project/widget/message.css
@@ -1,4 +1,4 @@
-div.widget.project-messages textarea {
+div.widget.project-message textarea {
     display: block;
     background-color: #dceedf;
     width: 100%;
@@ -6,7 +6,7 @@ div.widget.project-messages textarea {
     padding: .3em 0;
 }
 
-div.widget.project-messages .button {
+div.widget.project-message .button {
     float: right;
     margin: 1em 0 0;
 }
