--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -60,7 +60,7 @@ div.widget.project-supporters dl.summary dd.reached .euro {
 
 div.widget.project-supporters .supporters ul {
     list-style: none;
-    margin: 0 0 0 -20px;
+    margin: -20px 0 0 -20px;
     padding: 0;
 }
 
@@ -68,7 +68,7 @@ div.widget.project-supporters .supporters > ul > li {
     background-color:  white;
     padding: 10px 10px 10px 70px;
     float: left;
-    margin: 0 0 20px 20px;
+    margin: 20px 0 0 20px;
     min-width: 220px;
     height: 4.5em;
     position: relative;
