Base para css dashboard (lo he intentado pero me ha salido fail)

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -6,6 +6,7 @@
 @import url('home.css');
 @import url('superform.css');
 @import url('admin.css');
+@import url('dashboard.css');
 @import url('project.css');
 @import url('user.css');
 
