metiendo mano en el css del widget de proyecto para mostrar la descripcion

--- a/view/css/project/widget/projects.css
+++ b/view/css/project/widget/projects.css
@@ -34,5 +34,5 @@ div.widget.projects div.project div.balloon > h4 {
 }
 
 div.widget.projects div.project div.description {
-    display: none;
+/*    display: none; Lo muestro y recorto caracteres*/
 }
