--- a/view/css/worth/legend.css
+++ b/view/css/worth/legend.css
@@ -1,72 +1,4 @@
+@import url('base.css');
 div.widget.worthcracy-legend .title {
     display: none;
-}
-
-div.widget.worthcracy-legend {
-    text-align: center;
-}
-
-div.widget.worthcracy-legend ul {
-    padding: 1.3em 52px 1.3em 0;
-    margin: 0;
-    list-style: none;
-    position: relative;
-    display: inline-block;
-    background: url('../euro/xl.png') no-repeat right center;
-}
-
-div.widget.worthcracy-legend ul li {
-    display: inline-block;
-    width: 92px;
-    height: 8px;
-    overflow: hidden;
-    background-color: #e7e7e7;
-}
-
-div.widget.worthcracy-legend  ul li > span,
-div.widget.worthcracy-legend  ul li > em {
-    display: block;
-    width: 92px;
-    position: absolute;
-    text-align: center;
-}
-
-div.widget.worthcracy-legend  ul li > span {
-    top: 0;
-    font-size: 16px;
-}
-
-div.widget.worthcracy-legend  ul li > em {
-    bottom: 0;
-    color: #808285;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-}
-
-
-
-div.widget.worthcracy-legend  ul li.done.worth-1 {
-    background-color: #B6CAE0;
-    color: #B6CAE0;
-}
-
-div.widget.worthcracy-legend  ul li.done.worth-2 {
-    background-color: #92AFD1;
-    color: #92AFD1;
-}
-
-div.widget.worthcracy-legend  ul li.done.worth-3 {
-    background-color: #799EC7;
-    color: #799EC7;
-}
-
-div.widget.worthcracy-legend  ul li.done.worth-4 {
-    background-color: #3C71AE;
-    color: #3C71AE;
-}
-
-div.widget.worthcracy-legend  ul li.done.worth-5 {
-    background-color: #0C4E99;
-    color: #0C4E99;
 }
