--- a/view/css/user/widget/user.css
+++ b/view/css/user/widget/user.css
@@ -6,7 +6,7 @@ div.widget.user div.image {
     width: 80px;
     height: 80px;
     display: block;
-    background: url('/view/css/avatar/m.png') no-repeat top left;       
+    background: url('/view/css/avatar/l.png') no-repeat top left;       
     margin-bottom: 12px;
 }
 
@@ -33,7 +33,7 @@ div.widget.user dl dd {
 
 div.widget.user dl dd.location {
     padding-left: 15px;
-    background: url('user/location.png') no-repeat left center;
+    background: url('../../location/s.png') no-repeat left center;
     text-indent: .5em;
     text-decoration: none;
 }
