--- a/view/css/project/widget/projects.css
+++ b/view/css/project/widget/projects.css
@@ -36,3 +36,18 @@ div.widget.projects div.project div.balloon > h4 {
 div.widget.projects div.project div.description {
 /*    display: none; Lo muestro y recorto caracteres*/
 }
+
+div.widget.projects > div.more {
+    clear: both;
+    text-align: right;
+    
+}
+
+div.widget.projects > div.more a {
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+div.widget.projects > div.more a:hover {
+    text-decoration: underline;
+}
