--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -1,46 +1,72 @@
 body.dashboard div#main {
-    margin-top: 0;
-    margin-bottom: 0;
+    overflow: visible;
 }
 
 /**
 * Menu
 * Por Julian (copiando del mypixel porque no se hacer nada desde cero ~_~ )
 * resulta evidente...
-**
+*
+*/
 
 body.dashboard div#sub-header {
-    padding-bottom: 0;
+    padding-bottom: 4em;
+    margin-bottom: 0;
+    
 }
 
 body.dashboard div#dashboard-menu {
     display: block;
     max-width: 940px;
-    margin: 20px auto 0;
+    font-size: 13px;
+    margin: -2.6em auto 0;    
+    background-color: #78d1d1;
+    
 }
 
 body.dashboard div#dashboard-menu ul {
-    list-style-type: none;
-    display: inline;
+    list-style: none;
     margin: 0;
     padding: 0;
-    margin: 4px 8px;
-    display: block;
-}
-
-body.dashboard div#dashboard-menu ul li {
-    cursor: pointer;
     position: relative;
 }
 
+body.dashboard div#dashboard-menu ul li {    
+    display: inline-block;
+}
+
+body.dashboard div#dashboard-menu ul li,
 body.dashboard div#dashboard-menu ul li a {
-    padding: 2px 8px;
+    color: white;
     text-decoration: none;
-    white-space: nowrap;
 }
 
-body.dashboard div#dashboard-menu ul li ul{
-    float: left;
+body.dashboard div#dashboard-menu ul li a {
+    padding: .6em 1em;
+    height: 1.4em;
+    line-height: 1.4em;
+    text-transform: uppercase;
+    display: inline-block;
 }
 
-*/
+body.dashboard div#dashboard-menu ul li.section ul {
+    display: none;
+}
+
+body.dashboard div#dashboard-menu ul li.section.active {
+    margin-bottom: 2.6em;
+}
+
+body.dashboard div#dashboard-menu ul li.section.active ul {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2.6em;
+    right: 0;
+}
+
+body.dashboard div#dashboard-menu ul li.section.active,
+body.dashboard div#dashboard-menu ul li.section.active ul {
+    background-color: #1db3b2;
+}
