Estilos mensajes. Falta: colores por tipo de usuario, anidamientos?

--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -8,6 +8,7 @@
 @import url('widget/collaborations.css');
 @import url('widget/supporters.css');
 @import url('widget/rewards.css');
+@import url('widget/messages.css');
 @import url('../user/widget/user.css');
 @import url('../worth/legend.css');
 
