--- a/view/css/project/widget/messages.css
+++ b/view/css/project/widget/messages.css
@@ -13,7 +13,7 @@ div.project-messages div.message + div.message {
 div.project-messages div.message .avatar {
     position: absolute;
     left: -60px;
-    top: 10px;
+    top: 0;
     display: block;
     width: 50px;
     height: 50px;
