Espacio de widget en needs dentro de preview * No me he emperrado en ponerle el resto de estilos (cabeceras, y demases) para no hacer guarradas

--- a/view/css/project/edit/preview.css
+++ b/view/css/project/edit/preview.css
@@ -28,7 +28,8 @@ body.project-edit div#main div.project-preview div.widget.user {
 }
 
 body.project-edit div#main div.project-preview div.widget.project-summary,
-body.project-edit div#main div.project-preview div.widget.project-share {
+body.project-edit div#main div.project-preview div.widget.project-share,
+body.project-edit div#main div.project-preview div.widget.project-needs {
     max-width: 580px;
     margin-right: 20px;
 }
