"Mis cofinanciadores" (He quitado la leyenda "worthcracy" porque ya está al lado *en enorme*)

--- a/view/css/user/profile.css
+++ b/view/css/user/profile.css
@@ -1,6 +1,7 @@
 @import url('widget/worthcracy.css');
 @import url('widget/about.css');
 @import url('widget/social.css');
+@import url('widget/supporters.css');
 
 body.user-profile div#main div.widget {
     margin-bottom: 20px;
