--- a/view/css/user/widget/supporters.css
+++ b/view/css/user/widget/supporters.css
@@ -6,14 +6,14 @@ div.widget.user-supporters .supporters ul {
 
 div.widget.user-supporters .supporters > ul > li {
     background-color:  white;
-    padding: 10px 10px 10px 70px;    
+    padding: 10px 10px 10px 60px;    
     height: 4.5em;
     position: relative;
 }
 
 div.widget.user-supporters .supporters ul li .avatar {
     position: absolute;
-    left: 10px;
+    left: 0;
     top: 10px;
     width: 50px;
     height: 50px;
