Remake de los ultimos commits porque la he liado con mi rama mix-test

--- a/view/css/user/profile.css
+++ b/view/css/user/profile.css
@@ -1,13 +1,15 @@
 @import url('widget/worthcracy.css');
 @import url('widget/about.css');
 @import url('widget/social.css');
+@import url('widget/supporters.css');
+@import url('widget/mates.css');
 
 body.user-profile div#main div.widget {
     margin-bottom: 20px;
 }
 
 body.user-profile div#main > div.center {
-    min-width: 620px;
+    width: 620px;
     float: left;        
 }
 
