Pagina FAQ, maquetacion, contenido dinamico y css * Este css es de Pedro, se han tocado archivos comunes: common.css, header.css y goteo.css

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -9,8 +9,11 @@
 @import url('dashboard.css');
 @import url('project.css');
 @import url('user.css');
+@import url('faq.css');
+@import url('blog.css');
 
-div#sub-header > div {
+div#sub-header > div,
+div#sub-header-secondary > div {
     display: block;
     max-width: 940px;
     margin: 0 auto;
