Quitando el cambio de color de background que habia puesto Pedro

--- a/view/css/common.css
+++ b/view/css/common.css
@@ -10,7 +10,7 @@ html {
 
 html, body {        
     padding: 0;    
-    background-color: #ecebec;    
+    background-color: #e7e7e7;
 }
 
 body {
