Copiando el css de la flechita de meritocracia al widget central de aportadores de proyecto * He movido unos pixeles el padding y el top para que no se corte el nombre del nivel

--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -203,10 +203,12 @@ div.widget.project-supporters .supporters ul li dl dd.worthcracy ul li.done.wort
 div.widget.project-supporters .supporters ul li dl dd.worthcracy ul li > strong {
     display: block;
     position: absolute;
-    top: 10px;    
+    top: 7px;
     font-weight: normal;
     width: 200px;
     left: 50%;
     margin-left: -100px;
     text-align: center;
+    background: url('../../worth/beak.png') no-repeat center top;
+    padding-top: 6px;
 }
