--- a/view/css/blog.css
+++ b/view/css/blog.css
@@ -8,8 +8,137 @@
 	float:right;
 }
 div.widget.blog-content-module,
-div.widget.blog-sidebar-module {
+div.widget.blog-sidebar-module, 
+#blog-content .post{
     background-color: white;
     line-height: 18px;
     margin: 0 0 20px;
 }
+div.widget.blog-content-module h4 a,
+#blog-content .post h4 a {
+    font: bold 18px Helvetica, Arial, Geneva, sans-serif;
+	margin: 0 0 5px 0;
+	text-transform:none;
+	color:#535353;
+	text-decoration:none;
+}
+div.widget.blog-content-module .date,
+#blog-content .post  .date{
+    display:block;
+	color:#cabcbf;
+	margin: 0 0 5px 0;
+}
+div.widget.blog-content-module .categories,
+#blog-content .post .categories{
+    display:block;
+	color:#808285;
+	margin: 0 0 8px 0;
+}
+div.widget.blog-content-module  blockquote,
+#blog-content .post blockquote{
+	color: #58595B;
+	padding: 0 0 20px 0;
+	border-bottom: 1px solid #CABCBF;
+	margin: 18px 18px 12px 18px;
+}
+div.widget.blog-content-module  .embed,
+#blog-content .post .embed{
+    width: 500px;
+    height: 285px;
+	margin: 10px  30px;
+}
+div.widget.blog-content-module .comments-num,
+#blog-content .post .comments-num{
+	float:left;
+	background: transparent url('ico-blogcomment.png') scroll no-repeat  0 0;
+	padding: 0 0 0 26px;
+	height:24px;
+	margin: 0 0 0 20px;
+}
+div.widget.blog-content-module .comments-num a,
+#blog-content .post .comments-num a {
+	color:#00ad4e;
+	text-decoration:none;
+}
+div.widget.blog-content-module ul.share-goteo,
+#blog-content .post ul.share-goteo {
+	margin: 0 20px  0 0;
+	padding:0px;
+	list-style:none;
+	float:right;
+}
+div.widget.blog-content-module ul.share-goteo li,
+#blog-content .post ul.share-goteo li{
+	display:inline;
+	float:left;
+	margin: 0 0 0 10px;
+}
+div.widget.blog-content-module ul.share-goteo li.twitter a,
+div.widget.blog-content-module ul.share-goteo li.facebook a,
+div.widget.blog-content-module ul.share-goteo li.rss a,
+#blog-content .post  ul.share-goteo li.twitter a,
+#blog-content .post  ul.share-goteo li.facebook a,
+#blog-content .post  ul.share-goteo li.rss a{
+	height:20px;
+	float:left;
+	padding: 0 0 0 25px;
+}
+div.widget.blog-content-module ul.share-goteo li.sharetext,
+#blog-content .post ul.share-goteo li.sharetext{
+	height:20px;
+	float:left;
+	color:#cabcbf;
+}
+div.widget.blog-content-module ul.share-goteo li.twitter a,
+#blog-content .post ul.share-goteo li.twitter a{
+	background: transparent url('twitter.png') scroll no-repeat  0 0;
+	color:#13c2ec;
+	text-decoration:none;
+}
+div.widget.blog-content-module ul.share-goteo li.facebook a,
+#blog-content .post ul.share-goteo li.facebook a{
+	background: transparent url('facebook.png') scroll no-repeat  0 0;
+	color:#4a6393;
+	text-decoration:none;
+}
+div.widget.blog-sidebar-module h3.title {
+    border-bottom: 1px solid #20b3b2;
+	color: #20b3b2;
+    font: normal 15px Helvetica,Arial,Geneva,sans-serif;
+    margin: 0 0 1em;
+    padding: 0 2px 0.2em;
+}
+div.widget.blog-sidebar-module ul#blog-side-posts{
+    margin:0 25px;
+	padding: 0;
+}
+div.widget.blog-sidebar-module ul#blog-side-posts li{
+    margin:0 0 10px 0;
+}
+div.widget.blog-sidebar-module ul#blog-side-posts li a{
+	text-decoration:none;
+}
+div.widget.blog-sidebar-module ul#blog-side-tags,
+div.widget.blog-sidebar-module ul#blog-side-comments{
+    margin:0 10px;
+	padding: 0;
+	list-style:none;
+}
+div.widget.blog-sidebar-module ul#blog-side-tags li{
+    margin:0 0 5px 0;
+}
+div.widget.blog-sidebar-module ul#blog-side-tags li a{
+	text-decoration:underline;
+	color:#e32526;
+}
+div.widget.blog-sidebar-module ul#blog-side-comments li .date{
+    color:#cabcbf;
+	margin: 10px 0;
+}
+div.widget.blog-sidebar-module ul#blog-side-comments li{
+    margin:0 0 20px 0;
+}
+div.widget.blog-sidebar-module ul#blog-side-comments li p{
+	margin: 0px;
+}
+
