Todo el panel de revisor de proyectos con ajax, informes y toda la mandanga powa

--- a/view/css/review/view.css
+++ b/view/css/review/view.css
@@ -63,3 +63,8 @@ body.review div#review-menu ul li.section.active,
 body.review div#review-menu ul li.section.active ul {
     background-color: #1db3b2;
 }
+
+body.review div#main div.widget {
+    margin-bottom: 20px;
+}
+
