Pagina noticias * estilos copiados de blog y faq (a falta de diseño buenos son copypastes)

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -12,6 +12,7 @@
 @import url('user.css');
 @import url('faq.css');
 @import url('blog.css');
+@import url('news.css');
 
 div#sub-header > div,
 div#sub-header-secondary > div {
