--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -9,6 +9,8 @@
 @import url('widget/supporters.css');
 @import url('widget/rewards.css');
 @import url('widget/messages.css');
+@import url('widget/updates.css');
+@import url('widget/invest.css');
 @import url('../user/widget/user.css');
 @import url('../worth/legend.css');
 
